Revision history for Clustericious

        - Use PlugAuth::Lite for plugauth testing

0.9924  Thu Jun  6 07:58:50 EDT 2013
        - documentation

0.9923  Wed Jun  5 13:36:56 EDT 2013
        - fixed some documentation typos

0.9922  Wed Jun  5 13:08:14 EDT 2013
        - documentation enhacements
        - don't include utility in distribution

0.9921
         - support for MSWin32
         - rm Makefile.PL

0.9920
         - Mojolicious 4.0 compatability

0.9919   Fri May 10 19:27:40 EDT 2013
         - fix meta data

0.9915   Tue Mar 26 08:17:59 EDT 2013
         - plugin hook for autodata to add encodings

0.9914   - Tue Mar 26 08:03:44 EDT 2013
          Avoid timeouts in test and use $c->ua in simpleauth plugin.

0.9913    - Wed Mar 13 11:50:51 EDT 2013
          Allow cross origin resource sharing by default.

0.9912    - Fri Feb 22 10:39:52 EST 2013
          Fixed autodatahandler when charset is in content-type..

0.9911    - Fri Feb 15 09:58:40 EST 2013
          Fixed tests for mojo 3.85 compatibility

0.9910    - Thu Feb  7 15:04:10 EST 2013
          Mojolicious 3.84 compatibility

0.9909    - Thu Dec 20 11:13:29 PST 2012
          Plugauth compatibility

0.9908    - Thu Nov 29 12:51:20 EST 2012
          Added 'generate app', fixed 'generate client'.

0.9907    - Wed Nov 28 13:57:01 EST 2012
          Improved proxy support

0.9906    - Fri Oct 26 13:29:52 EDT 2012
          Support "PlugAuth" in SimpleAuth plugin (gollis)

0.9905    Mon Oct 22 11:29:31 EDT 2012
          - fixed tests interacting with Rose-Planter

0.9904    Thu Oct 18 13:15:52 EDT 2012
          - fixed /api when there is no Rose

0.9903    Mon Oct 15 15:26:40 EDT 2012
          - simpleauth plugin enhancements (gollis)
          - /api/:table (gollis)

0.9902    Fri Aug 17 13:58:46 EDT 2012
          'generate client' command

0.9901    Thu Aug 16 11:57:02 EDT 2012
          first release

