@@ -3,7 +3,7 @@ abstract: 'Mojo and HTTP based cluster framework'
 author:
   - 'Brian Duggan <brian.duggan@nasa.gov>'
 build_requires:
-  Clustericious::Config: 0.01
+  Clustericious::Config: 0.17
   Clustericious::Log: 0.05
   File::HomeDir: 0
   File::HomeDir::Test: 0
@@ -16,7 +16,7 @@ build_requires:
   Module::Build: 0.36
   MojoX::Log::Log4perl: 0
   Mojolicious: 3.85
-  PlugAuth::Lite: 0.03
+  PlugAuth::Lite: 0.05
   Sub::Exporter: 0
   Sys::Hostname: 0
   Test::More: 0
@@ -38,90 +38,90 @@ no_index:
 provides:
   Clustericious:
     file: lib/Clustericious.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::App:
     file: lib/Clustericious/App.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command:
     file: lib/Clustericious/Command.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::apache:
     file: lib/Clustericious/Command/apache.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::generate:
     file: lib/Clustericious/Command/generate.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::generate::app:
     file: lib/Clustericious/Command/generate/app.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::generate::client:
     file: lib/Clustericious/Command/generate/client.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::generate::mbd_app:
     file: lib/Clustericious/Command/generate/mbd_app.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::hypnotoad:
     file: lib/Clustericious/Command/hypnotoad.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::lighttpd:
     file: lib/Clustericious/Command/lighttpd.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::nginx:
     file: lib/Clustericious/Command/nginx.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::plackup:
     file: lib/Clustericious/Command/plackup.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::start:
     file: lib/Clustericious/Command/start.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::status:
     file: lib/Clustericious/Command/status.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Command::stop:
     file: lib/Clustericious/Command/stop.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Commands:
     file: lib/Clustericious/Commands.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Controller:
     file: lib/Clustericious/Controller.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::HelloWorld:
     file: lib/Clustericious/HelloWorld.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Plugin::AutodataHandler:
     file: lib/Clustericious/Plugin/AutodataHandler.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Plugin::PlugAuth:
     file: lib/Clustericious/Plugin/PlugAuth.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Renderer:
     file: lib/Clustericious/Renderer.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::RouteBuilder:
     file: lib/Clustericious/RouteBuilder.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::RouteBuilder::CRUD:
     file: lib/Clustericious/RouteBuilder/CRUD.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::RouteBuilder::Common:
     file: lib/Clustericious/RouteBuilder/Common.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::RouteBuilder::Proxy:
     file: lib/Clustericious/RouteBuilder/Proxy.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::RouteBuilder::Search:
     file: lib/Clustericious/RouteBuilder/Search.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Clustericious::Templates:
     file: lib/Clustericious/Templates.pm
-    version: 0.9924_04
+    version: 0.9924_05
   Test::Clustericious:
     file: lib/Test/Clustericious.pm
-    version: 0.9924_04
+    version: 0.9924_05
 requires:
   File::ShareDir: 1.00
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.9924_04
+version: 0.9924_05
