@@ -57,7 +57,7 @@ facilities for a variety of deployment options.
 
 =cut
 
-our $VERSION = '0.9924_04';
+our $VERSION = '0.9924_05';
 
 =head1 TODO
 
