@@ -30,7 +30,7 @@ use Clustericious::Config;
 
 use Mojo::Base 'Mojolicious::Commands';
 
-our $VERSION = '0.9924_04';
+our $VERSION = '0.9924_05';
 
 has namespaces => sub { [qw/Clustericious::Command Mojolicious::Command/] };
 
