@@ -25,7 +25,7 @@ L<Clustericious>, L<Mojolicious::Lite>
 
 =cut
 
-our $VERSION = '0.9924_04';
+our $VERSION = '0.9924_05';
 
 our %Routes;
 
