@@ -56,7 +56,7 @@ use Sub::Exporter -setup => {
     collectors => ['defaults'],
 };
 
-our $VERSION = '0.9924_04';
+our $VERSION = '0.9924_05';
 
 sub _build_create {
     my ($class, $name, $arg, $defaults) = @_;
